    built-in predicate.

    Corrected a bug where a call to a local predicate would always fails when
    the object or category contains a declared but not defined non-terminal.

    Corrected a bug in the compilation of (\+)//1 calls in grammar rules.
    Thanks to Bart Demoen, Ulrich Neumerkel, and Jan Burse for driving my
    attention to this bug.

    Updated the internal hook predicate '$lgt_tr_predicate_indicators'/2,
    used in the config files for processing proprietary Prolog directives,
    in order to translate both grammar rule non-terminal indicators and
    predicate indicators. A possible usage scenario is tabling grammar rule
    non-terminals.

    Updated the definition of the Logtalk flag "prolog_version" for Ciao in
    order to compute major, minor, and patch version numbers.

    Corrected a bug in the goal_expansion/2 clauses found on the SWI-Prolog
    and YAP config files that are used for expanding calls to the Prolog
    built-in predicates phrase/2-3 with a Object::GrammarRuleBody in the
    first argument.

    Added a set of unit tests for the "securemp" example.

    Improved the "debug_hooks" example, showing how to use a parametric hook
    object in alternative to two simple hook objects.

    Improved the "help" example by adding a helper predicate for quick access
    to the Logtalk User and Reference manuals. Added support for CxProlog.

    Added partial support for CxProlog to the "cc" example in order to support
    the "help" example.

    Updated the "multifile" example in order to avoid compilation errors when
    using a back-end Prolog compiler (such as B-Prolog) that doesn't support
    discontiguous predicates.

    Improved the "examples/tester.sh" script in order to print the current
    time and date, plus the Logtalk and back-end Prolog compiler versions,
    and to abstract the different syntax requirements for initialization
    goals used by Prolog compilers.


2.40.0 - June 16, 2010
