@@ -125,8 +125,10 @@
 				<regex>(\*)</regex>
 				<regex>(//)</regex>
 				<regex>(/)</regex>
-				<regex>\s(rem)\s</regex>
-				<regex>\s(mod)\s</regex>
+				<regex>\b(e)\b</regex>
+				<regex>\b(pi)\b</regex>
+				<regex>\b(rem)\b</regex>
+				<regex>\b(mod)\b</regex>
 				<regex>\b(rem)\(</regex>
 				<regex>\b(mod)\(</regex>
 				<regex>\b(abs)\(</regex>
